Closed Bug 968193 Opened 12 years ago Closed 12 years ago

flash-plugin freezes when window allocation size is 0x0

Categories

(Core Graveyard :: Plug-ins, defect)

All
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla30

People

(Reporter: stransky, Assigned: stransky)

References

Details

Attachments

(1 file, 1 obsolete file)

Downstream bug https://bugzilla.redhat.com/show_bug.cgi?id=1056079 flash-plugin freezes whole system when window allocation size is 0x0. (firefox:11553): Gtk-WARNING **: gtk_widget_size_allocate(): attempt to underallocate MozContainer's child GtkSocket 0x7fffcdbf4af0. Allocation is 0x0, but minimum required size is 1x1. According to gtk the allocation is automatically updated to 1x1 size during the gtk_widget_size_allocate() call.
No longer depends on: 939796
Backtrace of plugin-container when flash-plugin is frozen: #0 0x000000370ce4486f in g_list_index (list=0x7fffe7261c20 = {...}, data=0x7fffef5cc900) at glist.c:838 #1 0x000000339543daf4 in gdk_window_add_update_window (window=window@entry=0x7fffef5cc900 [GdkWindow]) at gdkwindow.c:5264 #2 0x000000339543f734 in impl_window_add_update_area (region=0x7fffe7262210, impl_window=0x7fffef5cc900 [GdkWindow]) at gdkwindow.c:5878 #3 impl_window_add_update_area (region=0x7fffe7262210, impl_window=0x7fffef5cc900 [GdkWindow]) at gdkwindow.c:5895 #4 gdk_window_invalidate_maybe_recurse_full (user_data=<optimized out>, child_func=<optimized out>, clear_bg=CLEAR_BG_NONE, region=0x7fffe7262760, window=0x7fffef5cc900 [GdkWindow]) at gdkwindow.c:5986 #5 gdk_window_invalidate_maybe_recurse_full (window=0x7fffef5cc900 [GdkWindow], region=0x7fffe7262760, clear_bg= CLEAR_BG_NONE, child_func=<optimized out>, user_data=<optimized out>) at gdkwindow.c:5895 #6 0x0000003394e827e0 in gtk_widget_invalidate_widget_windows (region=0x7fffe7262760, widget= 0x7fffef5e9c10 [GtkDrawingArea]) at gtkwidget.c:4004 #7 gtk_widget_invalidate_widget_windows (widget=0x7fffef5e9c10 [GtkDrawingArea], region=0x7fffe7262760) at gtkwidget.c:3990 #8 0x0000003394e8887b in gtk_widget_queue_shallow_draw (widget=0x7fffef5e9c10 [GtkDrawingArea]) at gtkwidget.c:4041 #9 gtk_widget_queue_shallow_draw (widget=0x7fffef5e9c10 [GtkDrawingArea]) at gtkwidget.c:4016 #10 0x0000003394e88908 in IA__gtk_widget_queue_resize (widget=0x7fffef5e9c10 [GtkDrawingArea]) at gtkwidget.c:3853 #11 0x0000003394e88c51 in gtk_widget_set_style_internal (widget=0x7fffef5e9c10 [GtkDrawingArea], style= 0x7fffe725ebf0 [PixbufStyle], initial_emission=0) at gtkwidget.c:7008 #12 0x00007fffe60680b0 in ?? () from /media/store2/Dokumenty/.mozilla/plugins/libflashplayer.so All backtraces I have are looping in gtk_widget_set_style_internal(). Actually it's not frozen but the gtk_widget_set_style_internal() call takes 2-3 mins so the browser is unresponsive.
Seems to be related to Bug 108347
Attached patch patch (obsolete) — Splinter Review
A simple patch based on Bug 108347
Attachment #8373301 - Flags: review?(karlt)
Comment on attachment 8373301 [details] [diff] [review] patch >+#if (MOZ_WIDGET_GTK) Please remove the ().
Attachment #8373301 - Flags: review?(karlt) → review+
Attachment #8373301 - Attachment is obsolete: true
Comment on attachment 8374019 [details] [diff] [review] patch for check-in r=karlt
Attachment #8374019 - Flags: review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
User Agent: Mozilla/5.0 (X11; Linux i686; rv:30.0) Gecko/20100101 Firefox/30.0 Verified fixed on Firefox 30 beta 6, build ID: 20140520115057. The flash-plugin no longer freezes if the window allocation size is 0x0.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: