Bug 968193 - flash-plugin freezes when window allocation size is 0x0. r=karlt